test-cases/negative/test_009_describe_without_end.lay
# negative test: describe without end describe
# expected: error should be thrown

describe 'my suite'
  test 'test 1'
    print 'test'
  end test


